Add the ability to figure out your own user key with one call
